--- a/src/scss/general/_variables.scss
+++ b/src/scss/general/_variables.scss
@@ -1,3 +1,10 @@
 // colors
 
+$black: #000000;
+$dark-grey: #071013;
+$dark-green: #619b8a;
+$light-green: #a1c181;
+$purple: #a27e8e;
+$yellow: #fcca46;
+$orange: #fe7f2d;
 $white: #ffffff;
