fonts + general styling

--- a/src/scss/general/_general.scss
+++ b/src/scss/general/_general.scss
@@ -1,6 +1,11 @@
 body {
   background: $white;
   color: $white;
+  font-family: $BeausiteClassic;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: $BeausiteSlick;
 }
 
 a {
