--- a/src/scss/general/_canvas.scss
+++ b/src/scss/general/_canvas.scss
@@ -7,23 +7,32 @@
 
   .question {
     display: none;
-    height: 50%;
-    width: 50%;
+    height: 100%;
+    width: 100%;
 
     .question-background, .question-content {
-      height: 50%;
+      height: 100%;
       position: fixed;
-      width: 50%;
+      width: 100%;
     }
 
     .question-background {
-      background: rgba(255, 255, 255, 0.75);
+      background: rgba(255, 255, 255, 0.95);
       z-index: 1;
     }
 
     .question-content {
-      color: $blue;
+      display: grid;
+      line-height: 3;
+      padding-left: 100px;
+      padding-right: 100px;
+      place-content: center;
+      text-align: center;
       z-index: 2;
+
+      .question-title {
+        font-size: 2.0rem;
+      }
     }
   }
 }
