--- a/src/scss/general/_general.scss
+++ b/src/scss/general/_general.scss
@@ -11,3 +11,44 @@ h1, h2, h3, h4, h5, h6 {
 a {
   color: #08f;
 }
+
+input[type="button"], input[type="submit"], button {
+  background: $black;
+  border: none;
+  color: $white;
+  font-size: 2.0rem;
+  margin: 20px;
+  padding-left: 30px;
+  padding-right: 30px;
+  text-transform: lowercase;
+}
+
+input[type="text"], label {
+  background: $yellow;
+  font-size: 2.0rem;
+}
+
+input[type="text"] {
+  border: none;
+  padding-left: 30px;
+  padding-right: 30px;
+  width: 100%;
+
+  &:focus {
+    border: none;
+  }
+}
+
+label {
+  cursor: pointer;
+  transition: background .5s;
+  width: 500px;
+}
+
+input[type="radio"] {
+  display: none;
+
+  &:checked + label {
+    background: $orange;
+  }
+}
