--- a/src/scss/modules/_start-screen.scss
+++ b/src/scss/modules/_start-screen.scss
@@ -41,10 +41,11 @@
       flex-direction: column;
       height: 100%;
       justify-content: center;
+      text-align: center;
 
       h1 {
         color: #000000;
-        font-size: 1.6rem;
+        font-size: 2.0rem;
       }
     }
   }
