--- a/src/scss/general/_general.scss
+++ b/src/scss/general/_general.scss
@@ -1,7 +1,10 @@
 body {
   background: $white;
   color: $black;
+  height: 100vh;
   font-family: $BeausiteClassic;
+  overflow: hidden;
+  width: 100vw;
 }
 
 h1, h2, h3, h4, h5, h6 {
