--- a/src/scss/general/_general.scss
+++ b/src/scss/general/_general.scss
@@ -3,6 +3,8 @@ body {
   color: $black;
   height: 100vh;
   font-family: $BeausiteClassic;
+  font-size: 1.5rem;
+  line-height: 2;
   overflow: hidden;
   width: 100vw;
 }
@@ -19,7 +21,6 @@ input[type="button"], input[type="submit"], button {
   background: $black;
   border: none;
   color: $white;
-  font-size: 2.0rem;
   margin: 20px;
   padding-left: 30px;
   padding-right: 30px;
@@ -28,7 +29,6 @@ input[type="button"], input[type="submit"], button {
 
 input[type="text"], label {
   background: $yellow;
-  font-size: 2.0rem;
 }
 
 input[type="text"] {
