--- a/src/scss/general/_variables.scss
+++ b/src/scss/general/_variables.scss
@@ -8,3 +8,11 @@ $purple: #a27e8e;
 $yellow: #fcca46;
 $orange: #fe7f2d;
 $white: #ffffff;
+
+// responsive
+
+$sm: 'min-width: 320px';
+$md: 'min-width: 768px';
+$lg: 'min-width: 992px';
+$xl: 'min-width: 1280px';
+
